fixed ingredients gap

--- a/style.css
+++ b/style.css
@@ -146,8 +146,8 @@ body {
 
 #back button {
     float: right;
-    margin-right: 5vw;
-    margin-top: 1vh;
+    margin-right: 4vw;
+    margin-top: 0px;
 }
 
 #rec-title {
